monitoring/ingress_grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressname
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
 ingressClassName: nginx
 rules:
  - host: grafana.domen.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-grafana
            port:
              number: 80
